styles/style.css
/* ... */
.main-gs {
    color: var(--main-yellow);
    font-size: xx-large;
    transition: 0.6s;
}

.gsTbilisiMainContnet {
    opacity: 0;
    transform: translateY(-100px);
    animation: mainContentAnimation 1s forwards;
}

.downloadApps-container {
    opacity: 0;
    transform: translateY(20px);
    animation: downloadContentAnimation 1s forwards;
}

@keyframes mainContentAnimation {
    100% {
        opacity: 1;
        transform: translateY(0px);
    }
}

@keyframes downloadContentAnimation {
    100% {
        opacity: 1;
        transform: translateY(0px);
    }
}

.section2 h1 {
    color: var(--main-yellow);
}

.section2 {
    width: 100%;
    height: auto;
    background-color: var(--main-black);
    color: var(--whiteColorHex);
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 90px 0;
    flex-direction: column;
    gap: 20px;
    font-family: var(--main-georgin-font);
    position: relative;
    overflow: hidden;
}

.yellowDecor {
    position: absolute;
}

.decNum1 {
    top: 70px;
    left: -200px;
}

.decNum2 {
    bottom: 0;
    right: -200px;
}

.headerHideShow {
    transform: translateY(-100%);
    opacity: 0;
}

.bgColorWhenMove {
    background-color: rgba(0, 0, 0, 0.616);
}

.second-header img {
    cursor: pointer;
}

.registerForm,
.courierForm {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 20px;
}

.courierForm {
    display: none;
}

.registerFormNone {
    display: none;
}

.courierFormShow {
    display: flex;
}

.driver-reg {
    display: flex;
    gap: 30px;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.registerFormInputs {
    display: flex;
    justify-content: center;
    flex-direction: column;
    gap: 10px;
}

.input-group {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.choose {
    width: 300px;
    background-color: var(--main-yellow);
    color: var(--blackColorHex);
    height: 60px;
    border-radius: 40px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: row;
    position: relative;
}

.choose h3 {
    color: var(--main-black);
    cursor: pointer;
    z-index: 2;
    transition: 1s;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.slider {
    width: 150px;
    height: 50px;
    border-radius: 40px;
    background-color: var(--blackColorHex);
    position: absolute;
    left: 4px;
    z-index: 1;
    transition: 0.7s;
}

.registerFormInputs input,
.registerFormInputs select,
.courierForm input,
.courierForm select {
    width: 400px;
    height: 40px;
    border-radius: 10px;
    border: none;
    outline: none;
    padding: 10px;
    color: var(--main-black);
}

.sliderRight {
    left: 146px;
}

.colorChangeOnChoose {
    color: var(--whiteColorHex) !important;
}

.regButton {
    width: 150px;
    height: 40px;
    background: none;
    color: var(--whiteColorHex);
    border-radius: 40px;
    border: 1px solid var(--main-yellow);
    cursor: pointer;
    outline: none;
    font-family: var(--main-georgin-font);
    transition: 0.4s;
}

.regButton:hover {
    box-shadow: inset 150px 0px 0px var(--main-yellow);
    color: var(--blackColorHex);
}

.section3 {
    width: 100%;
    height: auto;
    padding: 50px;
    display: flex;
    align-items: center;
    gap: 5rem;
    flex-direction: column;
    font-family: var(--main-georgin-font);
    background-color: var(--main-black);
}

.reason-container {
    width: 100%;
    text-align: center;
    line-height: 3rem;
}

.reason-container h1 {
    color: var(--main-yellow);
}

.reasons-main-container {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: row;
}

.reasons-container {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 30px;
}

.reason {
    background-color: rgba(63, 62, 62, 0.979);
    padding: 20px;
    border-radius: 8px;
    transform-style: preserve-3d;
    transform: perspective(1000px);
}

.reason p {
    width: 300px;
    line-height: 1.3rem;
    transform: translateZ(20px);
    cursor: default;
}

.section4 {
    width: 100%;
    height: 600px;
    background-color: var(--main-black);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 5rem;
}

.news-header h1 {
    color: var(--main-yellow);
    font-family: var(--main-georgin-font);
}

.news-container {
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-between;
    padding: 0 50px;
}

.section5 {
    width: 100%;
    height: 700px;
    background-color: var(--main-black);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 3rem;
    font-family: var(--main-georgin-font);
}

.section5 h1 {
    color: var(--main-yellow);
}

.collapsible-section {
    display: flex;
    flex-direction: column;
}

.main-quiestions-container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    padding: 20px;
    height: auto;
    font-family: var(--main-georgin-font);
    font-size: 0.9em;
}

.collapsible-container {
    width: 100%;
    max-width: 600px;
    margin: 0 auto;
    font-family: var(--main-georgin-font);
}

.collapsible-header {
    background: none;
    cursor: pointer;
    padding: 10px;
    border: 1px solid #ccc;
    border-bottom: none;
    width: 500px;
    color: var(--whiteColorHex);
    border-top-left-radius: 20px;
    transition: 0.4s;
}

.collapsible-header:hover {
    box-shadow: inset calc(500px - 40px) 0px 1px var(--main-yellow);
    color: var(--blackColorHex);
}
/* ... */

